fix horizontal scroll

--- a/src/scss/root.scss
+++ b/src/scss/root.scss
@@ -428,6 +428,10 @@ html, body {
 /* Desktop */
 @media only screen and (min-width: 64em) {
 
+  body {
+    overflow-x: hidden;
+  }
+
   // Custom Scroll bar
   ::-webkit-scrollbar-track {
     -webkit-box-shadow: inset 0 0 toRem(6) rgba(0, 0, 0, 0.3);
